Antlr-AST/output/AntlrParser.java
// $ANTLR 3.4 A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-AST\\Antlr.g 2012-06-24 20:05:19

import java.util.HashMap;
import java.io.BufferedWriter;
import java.io.File;
import java.io.FileWriter;



import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class AntlrParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "NAME", "NCNAME", "NONTERMINAL", "NUMBER", "OPTMAX", "REGEXP", "STRING", "WHITESPACE", "'\"'", "'/>'", "':'", "'<'", "'</>'", "'='", "'>'", "'['", "']'", "'include'", "'xmlns'"
    };

    public static final int EOF=-1;
    public static final int T__12=12;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int NAME=4;
    public static final int NCNAME=5;
    public static final int NONTERMINAL=6;
    public static final int NUMBER=7;
    public static final int OPTMAX=8;
    public static final int REGEXP=9;
    public static final int STRING=10;
    public static final int WHITESPACE=11;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public AntlrParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public AntlrParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return AntlrParser.tokenNames; }
    public String getGrammarFileName() { return "A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-AST\\Antlr.g"; }


    /** Map variable name to Integer object holding value */
    //HashMap memory = new HashMap();
    /*try{
    FileWriter opFile = new FileWriter("\\A:\\MyWorkspace\\Project\\Antlr\\src\\fileconversion\\ObjIntersectOfGrammar.g");
    BufferedWriter out = new BufferedWriter(opFile);
    catch[IOException e]{throws e;}*/



    public static class prog_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "prog"
    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-AST\\Antlr.g:31:1: prog : includes namespaceDecls regexpDefs productions ->;
    public final AntlrParser.prog_return prog() throws RecognitionException {
        AntlrParser.prog_return retval = new AntlrParser.prog_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        AntlrParser.includes_return includes1 =null;

        AntlrParser.namespaceDecls_return namespaceDecls2 =null;

        AntlrParser.regexpDefs_return regexpDefs3 =null;

        AntlrParser.productions_return productions4 =null;


        RewriteRuleSubtreeStream stream_regexpDefs=new RewriteRuleSubtreeStream(adaptor,"rule regexpDefs");
        RewriteRuleSubtreeStream stream_namespaceDecls=new RewriteRuleSubtreeStream(adaptor,"rule namespaceDecls");
        RewriteRuleSubtreeStream stream_includes=new RewriteRuleSubtreeStream(adaptor,"rule includes");
        RewriteRuleSubtreeStream stream_productions=new RewriteRuleSubtreeStream(adaptor,"rule productions");
        try {
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-AST\\Antlr.g:31:6: ( includes namespaceDecls regexpDefs productions ->)
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-AST\\Antlr.g:31:8: includes namespaceDecls regexpDefs productions
            {
            pushFollow(FOLLOW_includes_in_prog50);
            includes1=includes();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_includes.add(includes1.getTree());

            pushFollow(FOLLOW_namespaceDecls_in_prog52);
            namespaceDecls2=namespaceDecls();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_namespaceDecls.add(namespaceDecls2.getTree());

            pushFollow(FOLLOW_regexpDefs_in_prog54);
            regexpDefs3=regexpDefs();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_regexpDefs.add(regexpDefs3.getTree());

            pushFollow(FOLLOW_productions_in_prog56);
            productions4=productions();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_productions.add(productions4.getTree());

            // AST REWRITE
            // elements: 
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 31:55: ->
            {
                root_0 = null;
            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "prog"


    public static class includes_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "includes"
    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-AST\\Antlr.g:32:1: includes : ( include )* ->;
    public final AntlrParser.includes_return includes() throws RecognitionException {
        AntlrParser.includes_return retval = new AntlrParser.includes_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        AntlrParser.include_return include5 =null;


        RewriteRuleSubtreeStream stream_include=new RewriteRuleSubtreeStream(adaptor,"rule include");
        try {
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-AST\\Antlr.g:32:9: ( ( include )* ->)
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-AST\\Antlr.g:32:11: ( include )*
            {
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-AST\\Antlr.g:32:11: ( include )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==21) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-AST\\Antlr.g:32:11: include
            	    {
            	    pushFollow(FOLLOW_include_in_includes64);
            	    include5=include();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_include.add(include5.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            // AST REWRITE
            // elements: 
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 32:21: ->
            {
                root_0 = null;
            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "includes"


    public static class include_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "include"
    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-AST\\Antlr.g:34:1: include : 'include' '\"' '\"' ->;
    public final AntlrParser.include_return include() throws RecognitionException {
        AntlrParser.include_return retval = new AntlrParser.include_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token string_literal6=null;
        Token char_literal7=null;
        Token char_literal8=null;

        CommonTree string_literal6_tree=null;
        CommonTree char_literal7_tree=null;
        CommonTree char_literal8_tree=null;
        RewriteRuleTokenStream stream_21=new RewriteRuleTokenStream(adaptor,"token 21");
        RewriteRuleTokenStream stream_12=new RewriteRuleTokenStream(adaptor,"token 12");

        try {
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-AST\\Antlr.g:34:9: ( 'include' '\"' '\"' ->)
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-AST\\Antlr.g:34:11: 'include' '\"' '\"'
            {
            string_literal6=(Token)match(input,21,FOLLOW_21_in_include82); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_21.add(string_literal6);


            char_literal7=(Token)match(input,12,FOLLOW_12_in_include84); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_12.add(char_literal7);


            char_literal8=(Token)match(input,12,FOLLOW_12_in_include86); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_12.add(char_literal8);


            // AST REWRITE
            // elements: 
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 34:29: ->
            {
                root_0 = null;
            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "include"


    public static class namespaceDecls_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "namespaceDecls"
    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-AST\\Antlr.g:36:1: namespaceDecls : ( namespaceDecl )* ->;
    public final AntlrParser.namespaceDecls_return namespaceDecls() throws RecognitionException {
        AntlrParser.namespaceDecls_return retval = new AntlrParser.namespaceDecls_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        AntlrParser.namespaceDecl_return namespaceDecl9 =null;


        RewriteRuleSubtreeStream stream_namespaceDecl=new RewriteRuleSubtreeStream(adaptor,"rule namespaceDecl");
        try {
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-AST\\Antlr.g:36:15: ( ( namespaceDecl )* ->)
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-AST\\Antlr.g:36:17: ( namespaceDecl )*
            {
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-AST\\Antlr.g:36:17: ( namespaceDecl )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==22) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-AST\\Antlr.g:36:17: namespaceDecl
            	    {
            	    pushFollow(FOLLOW_namespaceDecl_in_namespaceDecls95);
            	    namespaceDecl9=namespaceDecl();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_namespaceDecl.add(namespaceDecl9.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            // AST REWRITE
            // elements: 
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 36:32: ->
            {
                root_0 = null;
            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "namespaceDecls"


    public static class namespaceDecl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "namespaceDecl"
    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-AST\\Antlr.g:39:1: namespaceDecl : 'xmlns' '=' '\"' '\"' ->;
    public final AntlrParser.namespaceDecl_return namespaceDecl() throws RecognitionException {
        AntlrParser.namespaceDecl_return retval = new AntlrParser.namespaceDecl_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token string_literal10=null;
        Token char_literal11=null;
        Token char_literal12=null;
        Token char_literal13=null;

        CommonTree string_literal10_tree=null;
        CommonTree char_literal11_tree=null;
        CommonTree char_literal12_tree=null;
        CommonTree char_literal13_tree=null;
        RewriteRuleTokenStream stream_22=new RewriteRuleTokenStream(adaptor,"token 22");
        RewriteRuleTokenStream stream_17=new RewriteRuleTokenStream(adaptor,"token 17");
        RewriteRuleTokenStream stream_12=new RewriteRuleTokenStream(adaptor,"token 12");

        try {
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-AST\\Antlr.g:39:15: ( 'xmlns' '=' '\"' '\"' ->)
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-AST\\Antlr.g:39:17: 'xmlns' '=' '\"' '\"'
            {
            string_literal10=(Token)match(input,22,FOLLOW_22_in_namespaceDecl117); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_22.add(string_literal10);


            char_literal11=(Token)match(input,17,FOLLOW_17_in_namespaceDecl119); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_17.add(char_literal11);


            char_literal12=(Token)match(input,12,FOLLOW_12_in_namespaceDecl121); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_12.add(char_literal12);


            char_literal13=(Token)match(input,12,FOLLOW_12_in_namespaceDecl123); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_12.add(char_literal13);


            // AST REWRITE
            // elements: 
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 39:37: ->
            {
                root_0 = null;
            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "namespaceDecl"


    public static class regexpDefs_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "regexpDefs"
    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-AST\\Antlr.g:41:1: regexpDefs : ( regexpDef )* ->;
    public final AntlrParser.regexpDefs_return regexpDefs() throws RecognitionException {
        AntlrParser.regexpDefs_return retval = new AntlrParser.regexpDefs_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        AntlrParser.regexpDef_return regexpDef14 =null;


        RewriteRuleSubtreeStream stream_regexpDef=new RewriteRuleSubtreeStream(adaptor,"rule regexpDef");
        try {
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-AST\\Antlr.g:41:13: ( ( regexpDef )* ->)
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-AST\\Antlr.g:41:15: ( regexpDef )*
            {
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-AST\\Antlr.g:41:15: ( regexpDef )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==REGEXP) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-AST\\Antlr.g:41:15: regexpDef
            	    {
            	    pushFollow(FOLLOW_regexpDef_in_regexpDefs134);
            	    regexpDef14=regexpDef();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_regexpDef.add(regexpDef14.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            // AST REWRITE
            // elements: 
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 41:26: ->
            {
                root_0 = null;
            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "regexpDefs"


    public static class regexpDef_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "regexpDef"
    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-AST\\Antlr.g:44:1: regexpDef : REGEXP '=' REGEXP OPTMAX ->;
    public final AntlrParser.regexpDef_return regexpDef() throws RecognitionException {
        AntlrParser.regexpDef_return retval = new AntlrParser.regexpDef_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token REGEXP15=null;
        Token char_literal16=null;
        Token REGEXP17=null;
        Token OPTMAX18=null;

        CommonTree REGEXP15_tree=null;
        CommonTree char_literal16_tree=null;
        CommonTree REGEXP17_tree=null;
        CommonTree OPTMAX18_tree=null;
        RewriteRuleTokenStream stream_REGEXP=new RewriteRuleTokenStream(adaptor,"token REGEXP");
        RewriteRuleTokenStream stream_17=new RewriteRuleTokenStream(adaptor,"token 17");
        RewriteRuleTokenStream stream_OPTMAX=new RewriteRuleTokenStream(adaptor,"token OPTMAX");

        try {
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-AST\\Antlr.g:44:11: ( REGEXP '=' REGEXP OPTMAX ->)
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-AST\\Antlr.g:44:13: REGEXP '=' REGEXP OPTMAX
            {
            REGEXP15=(Token)match(input,REGEXP,FOLLOW_REGEXP_in_regexpDef164); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_REGEXP.add(REGEXP15);


            char_literal16=(Token)match(input,17,FOLLOW_17_in_regexpDef167); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_17.add(char_literal16);


            REGEXP17=(Token)match(input,REGEXP,FOLLOW_REGEXP_in_regexpDef170); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_REGEXP.add(REGEXP17);


            OPTMAX18=(Token)match(input,OPTMAX,FOLLOW_OPTMAX_in_regexpDef176); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_OPTMAX.add(OPTMAX18);


            // AST REWRITE
            // elements: 
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 45:12: ->
            {
                root_0 = null;
            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "regexpDef"


    public static class productions_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "productions"
    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-AST\\Antlr.g:52:1: productions : ( production )* ->;
    public final AntlrParser.productions_return productions() throws RecognitionException {
        AntlrParser.productions_return retval = new AntlrParser.productions_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        AntlrParser.production_return production19 =null;


        RewriteRuleSubtreeStream stream_production=new RewriteRuleSubtreeStream(adaptor,"rule production");
        try {
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-AST\\Antlr.g:52:13: ( ( production )* ->)
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-AST\\Antlr.g:52:15: ( production )*
            {
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-AST\\Antlr.g:52:15: ( production )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==NONTERMINAL) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-AST\\Antlr.g:52:15: production
            	    {
            	    pushFollow(FOLLOW_production_in_productions189);
            	    production19=production();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_production.add(production19.getTree());

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            // AST REWRITE
            // elements: 
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 52:27: ->
            {
                root_0 = null;
            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "productions"


    public static class production_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "production"
    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-AST\\Antlr.g:56:1: production : optNonterminal ':' leftItems rightItems -> ^( optNonterminal leftItems rightItems ) ;
    public final AntlrParser.production_return production() throws RecognitionException {
        AntlrParser.production_return retval = new AntlrParser.production_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token char_literal21=null;
        AntlrParser.optNonterminal_return optNonterminal20 =null;

        AntlrParser.leftItems_return leftItems22 =null;

        AntlrParser.rightItems_return rightItems23 =null;


        CommonTree char_literal21_tree=null;
        RewriteRuleTokenStream stream_14=new RewriteRuleTokenStream(adaptor,"token 14");
        RewriteRuleSubtreeStream stream_rightItems=new RewriteRuleSubtreeStream(adaptor,"rule rightItems");
        RewriteRuleSubtreeStream stream_leftItems=new RewriteRuleSubtreeStream(adaptor,"rule leftItems");
        RewriteRuleSubtreeStream stream_optNonterminal=new RewriteRuleSubtreeStream(adaptor,"rule optNonterminal");
        try {
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-AST\\Antlr.g:56:12: ( optNonterminal ':' leftItems rightItems -> ^( optNonterminal leftItems rightItems ) )
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-AST\\Antlr.g:56:14: optNonterminal ':' leftItems rightItems
            {
            pushFollow(FOLLOW_optNonterminal_in_production237);
            optNonterminal20=optNonterminal();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_optNonterminal.add(optNonterminal20.getTree());

            char_literal21=(Token)match(input,14,FOLLOW_14_in_production239); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_14.add(char_literal21);


            pushFollow(FOLLOW_leftItems_in_production241);
            leftItems22=leftItems();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_leftItems.add(leftItems22.getTree());

            pushFollow(FOLLOW_rightItems_in_production243);
            rightItems23=rightItems();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_rightItems.add(rightItems23.getTree());

            // AST REWRITE
            // elements: leftItems, optNonterminal, rightItems
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 57:2: -> ^( optNonterminal leftItems rightItems )
            {
                // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-AST\\Antlr.g:57:5: ^( optNonterminal leftItems rightItems )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(stream_optNonterminal.nextNode(), root_1);

                adaptor.addChild(root_1, stream_leftItems.nextTree());

                adaptor.addChild(root_1, stream_rightItems.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "production"


    public static class optNonterminal_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

